--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,32 +1,32 @@
-certifi==2022.6.15*
-charset-normalizer==2.0.12*
-click==8.1.3*
-dbus-python==1.2.16
-distro-info==1.0*
-dominate==2.6.0*
-Flask==2.1.2*
-Flask-Bootstrap==3.3.7.1*
-Flask-Login==0.6.1*
-Flask-MySQL==1.5.2*
-Flask-SQLAlchemy==2.5.1*
-Flask-WTF==1.0.1*
-greenlet==1.1.2*
-gyp==0.1
-idna==3.3*
-importlib-metadata==4.11.4*
-itsdangerous==2.1.2*
-Jinja2==3.1.2*
-MarkupSafe==2.1.1*
-mysql-connector-python==8.0.29*
-protobuf==4.21.1*
-PyMySQL==1.0.2*
-python-apt==2.2.1*
-python-dotenv==0.20.0*
-requests==2.28.0*
-SQLAlchemy==1.4.37*
-unattended-upgrades==0.1
-urllib3==1.26.9*
-visitor==0.1.3*
-Werkzeug==2.1.2*
-WTForms==3.0.1*
-zipp==3.8.0*
+					certifi==2022.6.15 (fufilled)
+pip install charset-normalizer==2.0.12 			-8 
+					click==8.1.3X (fufilled)
+					dbus-python==1.2.16(fufilled)
+					distro-info==1.0(fufilled)
+					dominate==2.6.0(fufilled)
+pip install  Flask==2.1.2 				-1
+pip install Flask-Bootstrap==3.3.7.1 			-2
+pip install Flask-Login==0.6.1 				-3
+pip install Flask-MySQL==1.5.2 				-4
+pip install Flask-SQLAlchemy==2.5.1 			-5
+pip install Flask-WTF==1.0.1 				-6
+					greenlet==1.1.2 X (fufilled)
+pip install gyp-next==0.1 				-7
+pip install idna==3.3 					-9
+					importlib-metadata==4.11.4(fufilled)
+					itsdangerous==2.1.2(fufilled)
+					Jinja2==3.1.2(fufilled)
+					MarkupSafe==2.1.1
+pip install mysql-connector-python==8.0.29		-11
+					protobuf==4.21.1(fufilled)
+					PyMySQL==1.0.2(fufilled)
+					python-apt==2.2.1(fufilled)
+pip install python-dotenv==0.20.0			-12
+pip install requests==2.28.0				-13
+					SQLAlchemy==1.4.37 (fufilled)
+					unattended-upgrades==0.1 x (fufilled)
+					urllib3==1.26.9(fufilled)
+					visitor==0.1.3(fufilled)
+					Werkzeug==2.1.2(fufilled)
+pip install WTForms==3.0.1				-10
+					zipp==3.8.0(fufilled)
